// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should open and close the menu 1`] = `
<header
  class="css-1dxui3r"
>
  <button
    aria-label="Open navigation menu"
    class="css-k73tyo"
  >
    <svg
      aria-hidden="true"
      class="css-ylhc0e"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="css-7keydz"
  />
  <nav
    aria-expanded="false"
    class="css-1l9oqi7"
  >
    <button
      aria-label="Close navigation menu"
      class="css-98lnwj"
    >
      <svg
        aria-hidden="true"
        class="css-ylhc0e"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="css-1r5t1rw"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="css-1r5t1rw"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="css-1r5t1rw"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
</header>
`;

exports[`<Header /> should render 1`] = `
<header
  class="css-1dxui3r"
>
  <button
    aria-label="Open navigation menu"
    class="css-k73tyo"
  >
    <svg
      aria-hidden="true"
      class="css-ylhc0e"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="css-7keydz"
  />
  <nav
    aria-expanded="false"
    class="css-1l9oqi7"
  >
    <button
      aria-label="Close navigation menu"
      class="css-98lnwj"
    >
      <svg
        aria-hidden="true"
        class="css-ylhc0e"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="css-1r5t1rw"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="css-1r5t1rw"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="css-1r5t1rw"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
</header>
`;

exports[`<Header /> should render opened menu 1`] = `
<header
  class="css-1dxui3r"
>
  <button
    aria-label="Open navigation menu"
    class="css-1vfy3tg"
  >
    <svg
      aria-hidden="true"
      class="css-ylhc0e"
    >
      <use
        xlink:href="#icon-bars"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="css-1erzxz4"
  />
  <nav
    aria-expanded="true"
    class="css-1mwtfyl"
  >
    <button
      aria-label="Close navigation menu"
      class="css-98lnwj"
    >
      <svg
        aria-hidden="true"
        class="css-ylhc0e"
      >
        <use
          xlink:href="#icon-close"
        />
      </svg>
    </button>
    <a
      class="css-1r5t1rw"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="css-1r5t1rw"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="css-1r5t1rw"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
</header>
`;
